# PPTAgent

./: .gitignore  .gitmodules  .pre-commit-config.yaml  BESTPRACTICE.md  DOC.md  Makefile  MasterSlide.pptx  README.md  ablation.py  agent.py  apis.py  app.py  backend.py  baseline.py  baseline_docpres.py  baseline_kctv.py  crawler.py  datamodel.py  deploy.sh  deploy_ppt_to_images_win.py  eval.py  eval.sh  eval_folder.sh  evals.py  experiments.py  fid.sh  induct.py  layout.py  layout_planning.py  llms.py  main.py  master_generate.py  model_utils.py  multimodal.py  ppt_agent.py  ppt_gen_serve.py  ppt_generate.py  ppt_handlers.py  ppt_hanlders.py  pptgen.py  (+15 more)
docker/: Dockerfile  docker_launch.sh  install.sh  launch.sh  pptagent.dockerfile
frontend/: readme.md
ppt_handlers/: ppt_generate.py  ppt_json_operate.py  ppt_parser.py  utils.py
pptagent/: __init__.py  agent.py  apis.py  document.py  induct.py  layout.py  llms.py  mcp_server.py  model_utils.py  multimodal.py  ppteval.py  pptgen.py  presentation.py  shapes.py  utils.py
pptagent_ui/: backend.py  serve_minerU.py  serve_sd3.py  vue.config.js
prompts/: ask_category.txt  caption.txt  category_split.txt  cluster_contentslides.txt  code_feedback.txt  content_induct.txt  document_refine.txt  functional_split.txt  get_outline.txt  heading_adjust.txt  layout_analyze.txt  lengthy_rewrite.txt  llm_judge.txt  markdown_image_caption.txt  markdown_table_caption.txt  merge_metadata.txt  ppteval_coherence.txt  ppteval_consistency.txt  ppteval_content.txt  ppteval_describe_content.txt  ppteval_describe_style.txt  ppteval_extract.txt  ppteval_outline.txt  ppteval_similarity.txt  ppteval_style.txt  ppteval_text.txt  ppteval_vision.txt  table_parsing.txt
resource/: DOC2PPT.md  dataset.jsonl  image_caption.json  image_stats.json  (+3 more)
(+139 files in other folders)
