[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PPTAgent"
version = "0.1.0"
authors = [{ name = "Hao Zheng", email = "wszh712811@gmail.com" }]
description = "PPTAgent, a tool for utilizing LLMs to generate PowerPoint presentations from documents."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = [
    "presentation",
    "powerpoint",
    "ppt",
    "llm",
    "ai",
    "document-processing",
]
dependencies = [
    "beautifulsoup4",
    "einops",
    "func_argparse",
    "jinja2",
    "json_repair",
    "jsonlines",
    "lxml",
    "mistune",
    "marker-pdf==1.1.0",
    "numpy",
    "oaib",
    "openai",
    "pandas",
    "pdf2image",
    "peft",
    "pillow",
    "PyPDF2",
    "python-Levenshtein",
    "python-multipart",
    "rich",
    "sentencepiece",
    "socksio",
    "tenacity",
    "timm",
    "transformers",
]

[project.urls]
"Homepage" = "https://github.com/icip-cas/PPTAgent"
"Bug Tracker" = "https://github.com/icip-cas/PPTAgent/issues"

[tool.setuptools]
packages = ["pptagent"]
include-package-data = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"